# finance

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  USAGE_GUIDE.txt  docker-compose.yml  packages.txt  pyproject.toml  requirements-minimal.txt  requirements.txt  run_daily.sh  setup_mac.sh
.github/workflows/: daily-analysis.yml  daily-recommendations.yml  weekly-optimization.yml
.streamlit/: config.toml
backtesting/: __init__.py  backtest_engine.py  enhanced_backtest_engine.py  ml_scoring.py  optimized_strategy.py  optimizer.py  scoring_engine.py  simple_winning_strategy.py
config/: __init__.py  settings.py  stock_universe.json
dashboard/: __init__.py  app.py  wsgi.py
data/: watchlist.json
docs/: AUTOMATED_SETUP.md  MAC_SETUP.md  PYTHONANYWHERE_SETUP.md  SMARTPHONE_WORKFLOW.md  backtesting_optimization_design.md  deployment_guide.md  indicator_selection_rationale.md  streamlit_cloud_deployment.md  web_service_architecture.md
scripts/: backfill_recommendations.py  daily_recommender.py  diagnose_recommendations.py  download_and_backtest.py  fetch_real_data.py  fine_tune.py  generate_daily_report.py  optimize_strategy.py  optimize_v2.py  run_backtest_comparison.py  run_backtest_with_sample_data.py  run_daily_recommendation.py  run_optimization.py  run_production.py  run_with_analysis.py  run_with_notify.py  test_new_strategy.py  upload_to_pythonanywhere.py  validate_backtest.py  validate_backtest_realistic.py  validate_backtest_simulation.py  validate_backtest_tuned.py  validate_enhanced_backtest.py  validate_with_real_data.py  visualize_portfolio_performance.py
src/: __init__.py
tests/: __init__.py  test_backtest_engine.py  test_candlestick_patterns.py  test_enhanced_backtest_engine.py  test_fundamental_filter.py  test_indicators.py  test_ml_scoring.py  test_scoring_engine.py  test_sector_analysis.py
web/: app.py  data_manager.py  scheduler.py
(+36 files in other folders)
