[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trading-recommender"
version = "0.1.0"
description = "Japanese Stock Swing Trading Recommender System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["stocks", "trading", "technical-analysis", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "pandas-datareader>=0.10.0",
    "numpy>=1.24.0",
    "pyarrow>=10.0.0",
    "scikit-optimize>=0.9.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "tqdm>=4.66.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.10b",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
]
dashboard = [
    "flask>=3.0.0",
]
ml = [
    "lightgbm>=4.0.0",
    "xgboost>=2.0.0",
]

[project.scripts]
run-optimization = "scripts.run_optimization:main"

[tool.setuptools.packages.find]
include = ["src*", "config*", "backtesting*", "scripts*", "dashboard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov=backtesting --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
